--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,5 @@ application-oauth2.properties
 ### oauth ###
 /src/main/resources/application-oauth.properties
 /src/main/resources/application.properties
+/src/main/resources/email.properties
 
